Added code to load api key

--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html>
     <head>
         <title>VideoAb</title>
+        <script src="https://apis.google.com/js/api.js"></script>
+        <script src="/youtubePlugin.js"></script>
+        <script src="/videoab.js"></script>
     </head>
     <body>
 
