Changed things to work as modules

--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@
     <head>
         <title>VideoAb</title>
         <script src="https://apis.google.com/js/api.js"></script>
-        <script src="/youtubePlugin.js"></script>
-        <script src="/videoab.js"></script>
+        <script type="module" src="/videoab.js"></script>
     </head>
     <body>
 
