Fixed centering of google sign in button

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
     <!--Show for new users or users who have elected to not allow cookies.-->
     <div id="google-auth" class="autocenter" style="display: none;">
-        <div class="" autocenter">
+        <div class="autocenter">
             <div id="g_id_onload"
                 data-client_id="50007999406-7vr8taktahml4loqt67aeuutn96mpofg.apps.googleusercontent.com"
                 data-context="signin" data-ux_mode="popup" data-callback="loginToGoogle" data-auto_prompt="false">
