--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
     <!--Once the user is logged in, show the actual app.-->
     <div id="app" style="display: none;">
-
+        <div id="videolist"></div>
     </div>
 
     <!--Load cookie script only after everything else is loaded-->
