--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
     <!--Once the user is logged in, show the actual app.-->
     <div id="app" style="display: none;">
         <div id="videolist"></div>
+        <!--TODO: Add infinite scroll to the video list.-->
     </div>
 
     <!--Load cookie script only after everything else is loaded-->
