Added framework for control panel.

--- a/index.html
+++ b/index.html
@@ -59,8 +59,9 @@
 
     <!--Once the user is logged in, show the actual app.-->
     <div id="app" style="display: none;">
-        <div id="videolist"></div>
+        <div id="videolist"><!--This element is populated by Javascript.--></div>
         <!--TODO: Add infinite scroll to the video list.-->
+        <div id="controlpanel"></div>
     </div>
 
     <!--Load cookie script only after everything else is loaded-->
