Added ids to thumbnail upload buttons

--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
                 <h3>Thumbnail Settings</h3>
                 Note: These settings will be ignored if you've selected not to AB test thumbnails.<br>
                 Note: Functionality not yet implemented.<br>
-                Thumbnail 1: <input type="file" accept="image/jpeg,image/png"><br>
-                Thumbnail 2: <input type="file" accept="image/jpeg,image/png"><br>
+                Thumbnail 1: <input type="file" accept="image/jpeg,image/png" id="thumbnail1"><br>
+                Thumbnail 2: <input type="file" accept="image/jpeg,image/png" id="thumbnail2"><br>
                 <!--TODO: Implement the ability to add or remove an arbitrary number of thumbnails.-->
             </div>
 
