Added base functionality to change both properties

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 <p>When this is selected, title 1 and thumbnail 1 will be treated
                     as one configuration, and will be tested together. When this is
                     unselected, every combination of title and thumbnail will be tried.</p>
-                <input type="checkbox" name="Link Properties"><br>
+                <input type="checkbox" name="Link Properties" id="linkProperties"><br>
             </div>
             <div id="titlecontrol" class="settingspanel">
                 <h3>Title Settings</h3>
