--- a/index.html
+++ b/index.html
@@ -23,33 +23,37 @@
             <h2>AB Testing Configuration</h2>
             <div id="generalcontrol" class="settingspanel">
                 <h3>General Settings</h3>
-                * Indicates a setting that has not yet been implemented; it does nothing.
                 <h4>Properties to AB Test:</h4>
                 Titles: <input type="checkbox" name="Titles" id="titleCheckbox" checked><br>
-                *Thumbnails: <input type="checkbox" name="Thumbnails" id="thumbnailCheckbox"><br>
+                Thumbnails: <input type="checkbox" name="Thumbnails" id="thumbnailCheckbox"><br>
                 <h4>AB Testing Settings</h4>
                 Time between swaps: <input type="number" name="Swap Time" id="swapInterval" min="1" value="10">
                 minutes<br>
-                *<p>When both titles and thumbnails are being AB tested, would
+                <p>When both titles and thumbnails are being AB tested, would
                     you like to link them?</p>
                 <p>When this is selected, title 1 and thumbnail 1 will be treated
-                    as one configuration, and will be tested together. When this is
+                    as one configuration, and will only be tested together. When this is
                     unselected, every combination of title and thumbnail will be tried.</p>
-                <input type="checkbox" name="Link Properties" id="linkProperties"><br>
+                <input type="checkbox" name="Link Properties" id="linkProperties" checked><br>
             </div>
             <div id="titlecontrol" class="settingspanel">
                 <h3>Title Settings</h3>
                 Note: These settings will be ignored if you've selected not to AB test titles.<br>
-                Title 1: <input type="text" id="title1"><br>
-                Title 2: <input type="text" id="title2"><br>
+                <div id="title-inputs">
+                    <span>Title 1: </span><input type="text" id="title1"><br>
+                    <span>Title 2: </span><input type="text" id="title2"><br>
+                </div>
+                <button id="add-title" onclick="addTitle()">+</button>
+                <button id="remove-title" onclick="removeTitle()">-</button>
                 <!--TODO: Implement the ability to add or remove an arbitrary number of titles.-->
             </div>
             <div id="thumbnailcontrol" class="settingspanel">
                 <h3>Thumbnail Settings</h3>
                 Note: These settings will be ignored if you've selected not to AB test thumbnails.<br>
-                Note: Functionality not yet implemented.<br>
-                Thumbnail 1: <input type="file" accept="image/jpeg,image/png" id="thumbnail1"><br>
-                Thumbnail 2: <input type="file" accept="image/jpeg,image/png" id="thumbnail2"><br>
+                <div id="thumbnail-inputs">
+                    Thumbnail 1: <input type="file" accept="image/jpeg,image/png" id="thumbnail1"><br>
+                    Thumbnail 2: <input type="file" accept="image/jpeg,image/png" id="thumbnail2"><br>
+                </div>
                 <!--TODO: Implement the ability to add or remove an arbitrary number of thumbnails.-->
             </div>
 
