--- a/index.html
+++ b/index.html
@@ -5,9 +5,14 @@
     <title>VideoAb</title>
     <link rel="stylesheet" href="https://meyerweb.com/eric/tools/css/reset/reset.css">
     <link rel="stylesheet" href="/styles.css">
+    <!--Google Fonts-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway&display=swap" rel="stylesheet">
 </head>
 
 <body>
+    <header><img id="logo" height="100%" src="logo.svg"></header>
     <!--Show for new users or users who have elected to not allow cookies.-->
     <div id="google-auth" class="autocenter">
         <button onclick="getGoogleOauthToken()">Sign in with Google</button>
