Added preview panel

--- a/index.html
+++ b/index.html
@@ -68,6 +68,9 @@
                 <button onclick="beginABTest()">Begin AB Test</button>
             </div>
         </div>
+        <div id="preview-panel" class="app-panel">
+            <h2>Preview</h2>
+        </div>
     </div>
 
     <!--Scripts are loaded last.-->
