--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>VideoAb</title>
     <link rel="stylesheet" href="https://meyerweb.com/eric/tools/css/reset/reset.css">
     <link rel="stylesheet" href="/styles.css">
+    <link rel="icon" href="favicon.svg">
     <!--Google Fonts-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
