--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
     <header><img id="logo" height="100%" src="logo.svg"></header>
     <!--Show for new users or users who have elected to not allow cookies.-->
     <div id="google-auth" class="autocenter">
-        <button onclick="getGoogleOauthToken()">Sign in with Google</button>
+        <button class="autocenter big-button" onclick="getGoogleOauthToken()">Sign in with Google</button>
+        
+        <div id="google-signin-button" ></div>
     </div>
 
     <!--Once the user is logged in, show the actual app.-->
@@ -24,10 +26,11 @@
         <div id="video-panel" class="app-panel" onscroll="infiniteScrollHandler()">
             <h2>Videos</h2>
             <div id="video-list">
-            <!--This element is populated by Javascript.-->
-            <div id="loading-box" class="videolistitem">
-                <img src="/loadingwheel.svg" style="position: absolute; left: 50%; top: 50%; transform: translate(-50%, -50%);">
-            </div>
+                <!--This element is populated by Javascript.-->
+                <div id="loading-box" class="videolistitem">
+                    <img src="/loadingwheel.svg"
+                        style="position: absolute; left: 50%; top: 50%; transform: translate(-50%, -50%);">
+                </div>
             </div>
         </div>
         <div id="controlpanel" class="app-panel">
