Changed styles; simplified javascript

--- a/index.html
+++ b/index.html
@@ -75,10 +75,13 @@
                 <button onclick="beginABTest()" class="big-button">Begin AB Test</button>
             </div>
         </div>
-        <!-- TODO: Implement a preview of what the video will look like on YouTube with all the thumbnail/title combinations.
+        <!-- TODO: Implement a preview of what the video will look like on YouTube with all the thumbnail/title combinations.-->
         <div id="preview-panel" class="app-panel">
             <h2>Preview</h2>
-        </div>-->
+            <div id="preview-list">
+                <!--This element is populated by script.-->
+            </div>
+        </div>
     </div>
 
     <!--Scripts are loaded last.-->
