Combined executeTest and beginABTest functions

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
             </div>
 
             <div class="settingspanel">
-                <button onclick="beginABTest()" class="big-button">Begin AB Test</button>
+                <button onclick="runABTest()" class="big-button">Begin AB Test</button>
             </div>
         </div>
         <!-- TODO: Implement a preview of what the video will look like on YouTube with all the thumbnail/title combinations.-->
